# solana_freelance_payment_protocol

./: Anchor.toml  README.md
programs/group_6_payment_protocol/: Cargo.toml
programs/group_6_payment_protocol/src/: errors.rs  lib.rs  utils.rs
programs/group_6_payment_protocol/src/instructions/: mod.rs  multisig.rs  project.rs
programs/group_6_payment_protocol/src/state/: mod.rs  multisig.rs  project_info.rs
tests/: client_init_and_cancel.ts  e2e.ts  group_6_payment_protocol.ts
utils/: utils.ts
